Ajustes no HTML

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="funcionamento">
                     <div id="funcao" class="funcao">
                         <i class="bi bi-check-circle-fill"></i>
-                        <h1>Aberto</h1>
+                        <h1 id="aberto-fechado">Aberto</h1>
                     </div>
                 </div>
             </div> 
