Adição de logotipo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardapio</title>
+    <title>Cardápio Digital</title>
     <!--Link Favicon-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!--Ícones do bootstrap-->
@@ -15,7 +15,7 @@
     <!--Cabeça da Página-->
     <header>
         <!--Logo header-->
-        <a class="logo-cabeca" href="index.html"><strong>Portfólio</strong></a>
+        <a class="logo-cabeca" href="#"><img src="imagens/logo/LOGOTIPO-CARDAPIO.png" alt="logotipo"></a>
         <!--Menu header-->
         <nav id="nav">
             <button id="botao-mobile"><!--Menu-->
