--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!--Cabeça da Página-->
     <header>
         <!--Logo header-->
-        <a class="logo-cabeca" href="#"><img src="imagens/logo/logotipo-cardapio.png" alt="logotipo"></a>
+        <a class="logo-cabeca" href="#"><img src="imagens/logo/logotipo.png" alt="logotipo"></a>
         <!--Menu header-->
         <nav id="nav">
             <button id="botao-mobile"><!--Menu-->
                 <span id="hamburger"></span>
             </button>
             <ul class="menu-cabeca">
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="#sobre">facebook</a></li>
+                <li><a href="#projetos">Instagram</a></li>
+                <li><a href="#contato">whatsapp</a></li>
             </ul>
         </nav>
     </header>
@@ -40,6 +40,11 @@
                     <div id="funcao" class="funcao">
                         <i class="bi bi-check-circle-fill"></i>
                         <h1 id="aberto-fechado">Aberto</h1>
+                    </div>
+
+                    <div id="funcao2" class="funcao2">
+                        <i class="bi bi-check-circle-fill"></i>
+                        <h1 id="aberto-fechado">Fechado</h1>
                     </div>
                 </div>
             </div> 
