Ajustes no script JS

--- a/index.html
+++ b/index.html
@@ -470,5 +470,6 @@
     <!--Script da página-->
     <script src="script/script.js"></script>
     <script src="script/itens.js" defer></script>
+    <script src="script/funcaohora.js" defer></script>
 </body>
 </html>
