Ajustes gerais no HTML, CSS e JS.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
                 <span id="hamburger"></span>
             </button>
             <ul class="menu-cabeca">
-                <li><a href="#sobre">facebook</a></li>
-                <li><a href="#projetos">Instagram</a></li>
-                <li><a href="#contato">whatsapp</a></li>
+                <li><a href="#">
+                    <i class="bi bi-facebook"></i>
+                    <p>facebook</p>
+                </a></li>
+                <li><a href="#">
+                    <i class="bi bi-instagram"></i>
+                    <p>Instagram</p>
+                </a></li>
+                <li><a href="#">
+                    <i class="bi bi-whatsapp"></i>
+                    <p>whatsapp</p>
+                </a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +41,7 @@
     <main>
         <section class="apresentacao">
             <div class="perfil">
-                <img src="imagens/cliente-img/lanchonete/perfil-plinioramos.jpg" alt="perfil-do-usuario">
+                <img src="imagens/logo/LogoHamburger2.png" alt="perfil-do-usuario">
                 <h1>Lanchonete</h1>
                 <p>@Lanchonete</p>
 
