--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital</title>
     <!--Link Favicon-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logo/icone-hamburger.ico" type="image/x-icon">
     <!--Ícones do bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--Link CSS-->
@@ -16,29 +16,36 @@
     <header>
         <!--Logo header-->
         <a class="logo-cabeca" href="#"><img src="imagens/logo/logotipo.png" alt="logotipo"></a>
+
         <!--Menu header-->
         <nav id="nav">
             <button id="botao-mobile"><!--Menu-->
                 <span id="hamburger"></span>
             </button>
             <ul class="menu-cabeca">
+                <!--facebook-->
                 <li><a href="#">
                     <i class="bi bi-facebook"></i>
-                    <p>facebook</p>
+                    <p>Lanchonete</p>
                 </a></li>
+                <!--instagram-->
                 <li><a href="#">
                     <i class="bi bi-instagram"></i>
-                    <p>Instagram</p>
+                    <p>@lanchonete</p>
                 </a></li>
+                <!--Whatsapp-->
                 <li><a href="#">
                     <i class="bi bi-whatsapp"></i>
-                    <p>whatsapp</p>
+                    <p>(14) 99999-9999</p>
                 </a></li>
             </ul>
         </nav>
     </header>
+
     <!--Corpo da página-->
     <main>
+
+        <!--Perfil da empresa-->
         <section class="apresentacao">
             <div class="perfil">
                 <img src="imagens/logo/LogoHamburger2.png" alt="perfil-do-usuario">
@@ -50,13 +57,13 @@
                         <i class="bi bi-check-circle-fill"></i>
                         <h1 id="aberto-fechado">Aberto</h1>
                     </div>
-
                     <div id="funcao2" class="funcao2">
                         <i class="bi bi-check-circle-fill"></i>
                         <h1 id="aberto-fechado">Fechado</h1>
                     </div>
                 </div>
             </div> 
+
             <div class="localizacao">
                 <i class="bi bi-geo-alt-fill"></i>
                 <p>Rua das flores, 195, centro</p>
@@ -67,6 +74,54 @@
             </div>
         </section>
 
+        <!--Barra de promoção do dia-->
+        <section class="itens">
+            <!--Promoção do dia-cardapio-->
+            <div class="barra-item">
+                <h1>Promoção do dia</h1>
+                <button id="action-btn0" class="botao-menu">
+                    <i class="bi bi-caret-down-square-fill"></i>
+                </button></div>
+            <div class="containers" id="container0">
+                <!--Cards-pratos-->
+                <div class="cards">
+                    
+                    <div class="card">
+                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <div class="descricao">
+                            <h1>X-Salada</h1>
+                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
+                            <h1>R$ 25,00</h1>
+                        </div>
+                    </div> 
+                    <div class="card">
+                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <div class="descricao">
+                            <h1>X-Salada</h1>
+                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
+                            <h1>R$ 25,00</h1>
+                        </div>
+                    </div> 
+                    <div class="card">
+                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <div class="descricao">
+                            <h1>X-Salada</h1>
+                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
+                            <h1>R$ 25,00</h1>
+                        </div>
+                    </div> 
+                    <div class="card">
+                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <div class="descricao">
+                            <h1>X-Salada</h1>
+                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
+                            <h1>R$ 25,00</h1>
+                        </div>
+                    </div>  
+            </div>
+        </section>
+
+        <!--Barra de lanches-->
         <section class="itens">
             <!--Lanches-cardapio-->
             <div class="barra-item">
@@ -158,18 +213,11 @@
                         </div>
                     </div> 
             </div>
-            <div class="botao">
-                <a href="#" target="_blank">
-                    <button>
-                        <span>whatsapp</span>
-                        <i class="bi bi-whatsapp"></i>
-                    </button>
-                </a>
-            </div>
         </section>
 
+        <!--Barra de pizzas-->
         <section class="itens">
-            <!--Lanches-cardapio-->
+            <!--Pizzas-cardapio-->
             <div class="barra-item">
                 <h1>Pizzas</h1>
                 <button id="action-btn2" class="botao-menu">
@@ -259,18 +307,11 @@
                         </div>
                     </div> 
             </div>
-            <div class="botao">
-                <a href="#" target="_blank">
-                    <button>
-                        <span>whatsapp</span>
-                        <i class="bi bi-whatsapp"></i>
-                    </button>
-                </a>
-            </div>
         </section>
 
+        <!--Barra de pastéis-->
         <section class="itens">
-            <!--Lanches-cardapio-->
+            <!--Pastéis-cardapio-->
             <div class="barra-item">
                 <h1>Pastéis</h1>
                 <button id="action-btn3" class="botao-menu">
@@ -360,18 +401,11 @@
                         </div>
                     </div> 
             </div>
-            <div class="botao">
-                <a href="#" target="_blank">
-                    <button>
-                        <span>whatsapp</span>
-                        <i class="bi bi-whatsapp"></i>
-                    </button>
-                </a>
-            </div>
         </section>
 
+        <!--Barra de bebidas-->
         <section class="itens">
-            <!--Lanches-cardapio-->
+            <!--Bebidas-cardapio-->
             <div class="barra-item">
                 <h1>Bebidas</h1>
                 <button id="action-btn4" class="botao-menu">
@@ -461,21 +495,25 @@
                         </div>
                     </div> 
             </div>
-            <div class="botao">
-                <a href="#" target="_blank">
-                    <button>
-                        <span>whatsapp</span>
-                        <i class="bi bi-whatsapp"></i>
-                    </button>
-                </a>
-            </div>
         </section>
 
+        <!--Botão do whatsapp-->
+        <div class="botao">
+            <a href="#" target="_blank">
+                <button>
+                    <span>whatsapp</span>
+                    <i class="bi bi-whatsapp"></i>
+                </button>
+            </a>
+        </div>
+
     </main>
+
     <!--Pés da página-->
     <footer>
         <p class="creditos">Desenvolvido por <strong>codnome tecnologia</strong><br> &#169;Todos os direitos reservados</p>
     </footer>
+
     <!--Script da página-->
     <script src="script/script.js"></script>
     <script src="script/itens.js" defer></script>
