Ajustes nas cores CSS.

--- a/index.html
+++ b/index.html
@@ -87,37 +87,21 @@
                 <div class="cards">
                     
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <!--<img src="" alt="">-->
                         <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
+                            <!--<h1>Titulo</h1>-->
+                            <p>Vazio</p>
+                            <!--<h1>Valor</h1>-->
                         </div>
                     </div> 
-                    <div class="card">
+                    <!--<div class="card">
                         <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
                         <div class="descricao">
                             <h1>X-Salada</h1>
                             <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
                             <h1>R$ 25,00</h1>
                         </div>
-                    </div> 
-                    <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
-                        <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
-                        </div>
-                    </div> 
-                    <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
-                        <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
-                        </div>
-                    </div>  
+                    </div>--> 
             </div>
         </section>
 
