--- a/cliente/acaiteria.html
+++ b/cliente/acaiteria.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Digital</title>
     <!--Link Favicon-->
-    <link rel="shortcut icon" href="imagens/logo/icone-hamburger.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/imagens/logo/icone-sorvete.ico" type="image/x-icon">
     <!--Ícones do bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!--Link CSS-->
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="/estilo/style2.css">
 </head>
 <body>
     <!--Cabeça da Página-->
     <header>
         <!--Logo header-->
-        <a class="logo-cabeca" href="#"><img src="imagens/logo/LOGOTIPO-LANCHONETE.png" alt="logotipo"></a>
+        <a class="logo-cabeca" href="#"><img src="/imagens/logo/LOGOTIPO-SORVETERIA.png" alt="logotipo"></a>
 
         <!--Menu header-->
         <nav id="nav">
@@ -48,7 +48,7 @@
         <!--Perfil da empresa-->
         <section class="apresentacao">
             <div class="perfil">
-                <img src="imagens/logo/LogoHamburger2.png" alt="perfil-do-usuario">
+                <img src="/imagens/logo/LogoHamburger2.png" alt="perfil-do-usuario">
                 <h1>Lanchonete</h1>
                 <p>@Lanchonete</p>
 
@@ -499,8 +499,8 @@
     </footer>
 
     <!--Script da página-->
-    <script src="script/script.js"></script>
-    <script src="script/itens.js" defer></script>
-    <script src="script/funcaohora.js" defer></script>
+    <script src="/script/script.js"></script>
+    <script src="/script/itens.js" defer></script>
+    <script src="/script/funcaohora.js" defer></script>
 </body>
 </html>
