--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="perfil">
                 <img src="imagens/logo/LogoHamburger2.png" alt="perfil-do-usuario">
                 <h1>Lanchonete</h1>
-                <p>@Lanchonete</p>
+                <p>@lanchonete</p>
 
                 <div class="funcionamento">
                     <div id="funcao" class="funcao">
