Ajustes no estilo CSS.

--- a/cliente/acaiteria.html
+++ b/cliente/acaiteria.html
@@ -118,7 +118,7 @@
                 <div class="cards">
                     <!--Copo pequeno-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/copo-pequeno.jpg" alt="copo-pequeno">
                         <div class="descricao">
                             <h1>Copo Pequeno</h1>
                             <p>(Copo de 150ml)</p>
@@ -127,7 +127,7 @@
                     </div> 
                     <!--Copo médio-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/copo-pequeno.jpg" alt="copo-medio">
                         <div class="descricao">
                             <h1>Copo Médio</h1>
                             <p>(Copo de 250ml)</p>
@@ -136,7 +136,7 @@
                     </div> 
                     <!--Copo grande-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/copo-pequeno.jpg" alt="copo-grande">
                         <div class="descricao">
                             <h1>Copo Grande</h1>
                             <p>(Copo de 500ml)</p>
