Ajustes no CSS.

--- a/cliente/acaiteria.html
+++ b/cliente/acaiteria.html
@@ -121,7 +121,7 @@
                         <img src="/imagens/cliente-img/acaiteria/1-copo.jpg" alt="copo-pequeno">
                         <div class="descricao">
                             <h1>Copo Pequeno</h1>
-                            <p>(Copo de 150ml)</p>
+                            <p>(Copo de 250ml)</p>
                             <h1>R$ 10,00</h1>
                         </div>
                     </div> 
@@ -130,7 +130,7 @@
                         <img src="/imagens/cliente-img/acaiteria/1-copo.jpg" alt="copo-medio">
                         <div class="descricao">
                             <h1>Copo Médio</h1>
-                            <p>(Copo de 250ml)</p>
+                            <p>(Copo de 350ml)</p>
                             <h1>R$ 15,00</h1>
                         </div>
                     </div> 
@@ -159,7 +159,7 @@
                 <div class="cards">
                     <!--Banana-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/2-banana.jpg" alt="banana">
                         <div class="descricao">
                             <h1>Banana</h1>
                             <p>(Banana em fatias)</p>
@@ -168,7 +168,7 @@
                     </div> 
                     <!--Morango-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/3-morango.jpg" alt="morango">
                         <div class="descricao">
                             <h1>Morango</h1>
                             <p>(Morango em fatias)</p>
@@ -177,7 +177,7 @@
                     </div> 
                     <!--Kiwi-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/4-kiwi.jpg" alt="kiwi">
                         <div class="descricao">
                             <h1>Kiwi</h1>
                             <p>(Kiwi em fatias)</p>
@@ -186,7 +186,7 @@
                     </div>
                     <!--Paçoca rolha--> 
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/5-pacoca-rolha.jpg" alt="paçoca-rolha">
                         <div class="descricao">
                             <h1>Paçoca rolha</h1>
                             <p>(Paçoca rolha)</p>
@@ -195,7 +195,7 @@
                     </div> 
                     <!--Bis-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/6-bis.jpg" alt="bis">
                         <div class="descricao">
                             <h1>Bis</h1>
                             <p>(Bis chocolate/chocolate branco)</p>
@@ -204,7 +204,7 @@
                     </div> 
                     <!--Diamante negro-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/7-diamante-negro.jpg" alt="diamante-negro">
                         <div class="descricao">
                             <h1>Barra Diamante Negro</h1>
                             <p>(Pedaços de barra de chocolate)</p>
@@ -213,7 +213,7 @@
                     </div> 
                     <!--Leite Ninho-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/8-leite-po.jpg" alt="leite-em-po">
                         <div class="descricao">
                             <h1>Leite Ninho</h1>
                             <p>(Leite em pó Ninho)</p>
@@ -236,7 +236,7 @@
                 <div class="cards">
                     <!--Chocolate-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/9-calda-chocolate.jpg" alt="calda-chocolate">
                         <div class="descricao">
                             <h1>Chocolate</h1>
                             <p>(Calda de chocolate)</p>
@@ -245,7 +245,7 @@
                     </div> 
                     <!--Nutella-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/10-calda-nutella.jpg" alt="calda-nutella">
                         <div class="descricao">
                             <h1>Nutella</h1>
                             <p>(Calda de nutella)</p>
@@ -254,7 +254,7 @@
                     </div> 
                     <!--Leite condensado-->
                     <div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
+                        <img src="/imagens/cliente-img/acaiteria/11-calda-leite-condensado.jpg" alt="calda-leite-condensado">
                         <div class="descricao">
                             <h1>Leite Condensado</h1>
                             <p>(Calda de leite consensado)</p>
