--- a/cliente/pizzaria.html
+++ b/cliente/pizzaria.html
@@ -86,14 +86,14 @@
                 <!--Cards-pratos-->
                 <div class="cards">
                     
-                    <div class="card">
-                        <!--<img src="" alt="">-->
+                    <!--<div class="card">
+                        <img src="" alt="">
                         <div class="descricao">
-                            <!--<h1>Titulo</h1>-->
+                            <h1>Titulo</h1>
                             <p>Vazio</p>
-                            <!--<h1>Valor</h1>-->
+                            <h1>Valor</h1>
                         </div>
-                    </div> 
+                    </div>-->
                     <!--<div class="card">
                         <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
                         <div class="descricao">
