--- a/cliente/pizzaria.html
+++ b/cliente/pizzaria.html
@@ -26,12 +26,12 @@
                 <!--facebook-->
                 <li><a href="#">
                     <i class="bi bi-facebook"></i>
-                    <p>Lanchonete</p>
+                    <p>Pizzaria</p>
                 </a></li>
                 <!--instagram-->
                 <li><a href="#">
                     <i class="bi bi-instagram"></i>
-                    <p>@lanchonete</p>
+                    <p>@pizzaria</p>
                 </a></li>
                 <!--Whatsapp-->
                 <li><a href="#">
@@ -49,8 +49,8 @@
         <section class="apresentacao">
             <div class="perfil">
                 <img src="/imagens/cliente-img/pizzaria/0-logo-pizaria.png" alt="perfil-do-usuario">
-                <h1>Lanchonete</h1>
-                <p>@Lanchonete</p>
+                <h1>Pizzaria</h1>
+                <p>@pizzaria</p>
 
                 <div class="funcionamento">
                     <div id="funcao" class="funcao">
