Ajustes nas imagens.

--- a/inicio.html
+++ b/inicio.html
@@ -62,7 +62,7 @@
                 
                 <!--imagem de apresentação-->
                 <div class="img-pfil">
-                    <img src="" alt="">
+                    <img src="imagens/pagina-inicial/1-lanches-note-cell.png" alt="celular-notebook">
                 </div>
 
             </div>
