Ajustes na página inicial.

--- a/inicio.html
+++ b/inicio.html
@@ -51,10 +51,10 @@
 
                 <!--texto de apresentação-->
                 <div class="texto-btn">
-                    <h1>Olá mundo</h1>
+                    <h1>Seu cardapio na tela do celular ou notebook em qualquer lugar do mundo.</h1>
                     <a href="#" target="_blank">
                         <button>
-                            <span></span>
+                            <span>Contato</span>
                             <i class="bi bi-whatsapp"></i>
                         </button>
                     </a>
