Ajustes no CSS e HTML.

--- a/inicio.html
+++ b/inicio.html
@@ -59,14 +59,25 @@
                         </button>
                     </a>
                 </div>
-                
                 <!--imagem de apresentação-->
                 <div class="img-pfil">
                     <img src="imagens/pagina-inicial/1-lanches-note-cell.png" alt="celular-notebook">
                 </div>
 
+            </div>  
+        </section>
+
+        <!--Corpo da página-->
+        <section class="Corpo">
+            <div class="modelos">
+                <h1>Modelos e combinações de cores pensados especialmente para o seu negocio.</h1>
+                <img src="imagens/pagina-inicial/2-lanches-cell.png" alt="celular-cardapio">
             </div>
-            
+            <a href="#" target="_blank">
+                <button>
+                    <span>Modelos</span>
+                </button>
+            </a>
         </section>
 
     </main>
