Ajuntes da página inicial.

--- a/inicio.html
+++ b/inicio.html
@@ -68,16 +68,33 @@
         </section>
 
         <!--Corpo da página-->
-        <section class="Corpo">
+        <section class="corpo">
+            <!--texto de modelos-->
             <div class="modelos">
-                <h1>Modelos e combinações de cores pensados especialmente para o seu negocio.</h1>
-                <img src="imagens/pagina-inicial/2-lanches-cell.png" alt="celular-cardapio">
+                <h1>Modelos e combinações de cores pensados especialmente para o seu negócio.</h1>
+                <!--imagem referente a modelos-->
+                <img class="corpo-img" src="imagens/pagina-inicial/2-lanches-cell.png" alt="celular-cardapio">
             </div>
+            <!--botão de amosta de modelos-->
             <a href="#" target="_blank">
                 <button>
                     <span>Modelos</span>
                 </button>
             </a>
+        </section>
+
+        <section class="contratos">
+            <div class="cards">
+                <!--Card1-->
+                <div class="card">
+
+                </div>
+                <!--Card2-->
+                <div class="card">
+
+                </div>
+
+            </div>
         </section>
 
     </main>
