Ajustes na página inicial.

--- a/inicio.html
+++ b/inicio.html
@@ -23,20 +23,20 @@
                 <span id="hamburger"></span>
             </button>
             <ul class="menu-cabeca">
-                <!--facebook-->
-                <li><a href="#">
-                    <i class="bi bi-facebook"></i>
-                    <p>Lanchonete</p>
-                </a></li>
                 <!--instagram-->
                 <li><a href="#">
                     <i class="bi bi-instagram"></i>
-                    <p>@lanchonete</p>
+                    <p>@codnome_tec</p>
                 </a></li>
                 <!--Whatsapp-->
                 <li><a href="#">
                     <i class="bi bi-whatsapp"></i>
                     <p>(14) 99999-9999</p>
+                </a></li>
+                <!--Email-->
+                <li><a href="#">
+                    <i class="bi bi-envelope-at-fill"></i>
+                    <p>codnometec@gmail.com</p>
                 </a></li>
             </ul>
         </nav>
@@ -71,29 +71,63 @@
         <section class="corpo">
             <!--texto de modelos-->
             <div class="modelos">
-                <h1>Modelos e combinações de cores pensados especialmente para o seu negócio.</h1>
+                <div class="modelos-btn">
+
+                    <h1>Modelos e combinações de cores pensados especialmente para o seu negócio.</h1>
+
+                    <a href="#" target="_blank">
+                        <button>
+                            <span>Ver modelos</span>
+                        </button>
+                    </a>
+
+                </div>
                 <!--imagem referente a modelos-->
                 <img class="corpo-img" src="imagens/pagina-inicial/2-lanches-cell.png" alt="celular-cardapio">
             </div>
             <!--botão de amosta de modelos-->
             <a href="#" target="_blank">
                 <button>
-                    <span>Modelos</span>
+                    <span>Ver modelos</span>
                 </button>
             </a>
         </section>
 
         <section class="contratos">
+            <!--Título contratos-->
+            <h1>Contratos</h1>
+
             <div class="cards">
+
                 <!--Card1-->
                 <div class="card">
-
+                    <h1>R$ 9,99</h1>
+                    <div class="texto">
+                        <i class="bi bi-check-circle-fill"></i>
+                        <p>Alterações periódicas (mensais).</p>
+                    </div>
+                    <a href="#">
+                        <button>
+                            <span>Whatsapp</span>
+                            <i class="bi bi-whatsapp"></i>
+                        </button>
+                    </a>
                 </div>
+
                 <!--Card2-->
                 <div class="card">
-
+                    <h1>R$ 49,99</h1>
+                    <div class="texto">
+                        <i class="bi bi-check-circle-fill"></i>
+                        <p>Alterações diarias, semanais e mensais.</p>
+                    </div>
+                    <a href="#">
+                        <button>
+                            <span>Whatsapp</span>
+                            <i class="bi bi-whatsapp"></i>
+                        </button>
+                    </a>
                 </div>
-
             </div>
         </section>
 
