Ajustes na página inicial.

--- a/inicio.html
+++ b/inicio.html
@@ -94,14 +94,15 @@
         </section>
 
         <section class="contratos">
-            <!--Título contratos-->
-            <h1>Contratos</h1>
+            <!--Título planos-->
+            <h1>Planos</h1>
 
             <div class="cards">
 
                 <!--Card1-->
                 <div class="card">
-                    <h1>R$ 9,99</h1>
+                    <h1 class="plano">Básico</h1>
+                    <h1>R$ 14,99</h1>
                     <div class="texto">
                         <i class="bi bi-check-circle-fill"></i>
                         <p>Alterações periódicas (mensais).</p>
@@ -116,10 +117,11 @@
 
                 <!--Card2-->
                 <div class="card">
+                    <h1 class="plano">Completo</h1>
                     <h1>R$ 49,99</h1>
                     <div class="texto">
                         <i class="bi bi-check-circle-fill"></i>
-                        <p>Alterações diarias, semanais e mensais.</p>
+                        <p>Alterações diárias, semanais e mensais.</p>
                     </div>
                     <a href="#">
                         <button>
