--- a/cliente/lanchonete.html
+++ b/cliente/lanchonete.html
@@ -87,23 +87,16 @@
                 <!--Cards-pratos-->
                 <div class="cards">
                     
+                    <!--Item em promoção-->
                     <!--<div class="card">
-                        <img src="" alt="">
+                        <img src="/imagens/cliente-img/lanchonete/1-lanche.jpg" alt="x-salada">
                         <div class="descricao">
-                            <h1>Titulo</h1>
-                            <p>Vazio</p>
-                            <h1>Valor</h1>
+                            <h1>X-Salada</h1>
+                            <p>(ovo, alface, presuntos, queijo, alface)</p>
+                            <h1>R$ 25,00</h1>
                         </div>
                     </div>-->
 
-                    <!--<div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
-                        <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
-                        </div>
-                    </div>--> 
             </div>
         </section>
 
