--- a/cliente/lanchonete.html
+++ b/cliente/lanchonete.html
@@ -58,7 +58,7 @@
                         <h1 id="aberto-fechado">Aberto</h1>
                     </div>
                     <div id="funcao2" class="funcao2">
-                        <i class="bi bi-check-circle-fill"></i>
+                        <i class="bi bi-x-circle-fill"></i>
                         <h1 id="aberto-fechado">Fechado</h1>
                     </div>
                 </div>
