--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <h1>R$ 49,99</h1>
                     <div class="texto">
                         <i class="bi bi-check-circle-fill"></i>
-                        <p>Alterações diárias, semanais e mensais.</p>
+                        <p>Alterações diária, semanal e mensal.</p>
                     </div>
                     <a href="#">
                         <button>
