Ajustes no HTML.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <h1>Modelos e combinações de cores pensados especialmente para o seu negócio.</h1>
 
-                    <a href="#" target="_blank">
+                    <a href="modelos.html" target="_blank">
                         <button>
                             <span>Ver modelos</span>
                         </button>
