--- a/modelos.html
+++ b/modelos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio Digital</title>
+    <title>Cardápio Digital - modelos</title>
     <!--Link Favicon-->
     <link rel="shortcut icon" href="imagens/logo/icone-hamburger.ico" type="image/x-icon">
     <!--Ícones do bootstrap-->
