--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <img class="corpo-img" src="imagens/pagina-inicial/2-lanches-cell.png" alt="celular-cardapio">
             </div>
             <!--botão de amosta de modelos-->
-            <a href="#" target="_blank">
+            <a href="modelos.html" target="_blank">
                 <button>
                     <span>Ver modelos</span>
                 </button>
