Ajustes nos cards.

--- a/modelos.html
+++ b/modelos.html
@@ -56,29 +56,22 @@
                
                 <div class="card">
                     <a href="#" target="_blank">
-                        <img src="imagens/pagina-modelos/1-elink1.jpg" alt="modelo-1">
-                        <h1>Texto</h1>
+                        <img src="modelos/1-modelo.jpg" alt="modelo-1">
+                        <h1>Vermelho e amarelo</h1>
                     </a>
                 </div>
 
                 <div class="card">
                     <a href="#" target="_blank">
-                        <img src="imagens/pagina-modelos/1-elink1.jpg" alt="modelo-1">
-                        <h1>Texto</h1>
+                        <img src="modelos/2-modelo.jpg" alt="modelo-1">
+                        <h1>Preto cinza e Amarelo</h1>
                     </a>
                 </div>
 
                 <div class="card">
                     <a href="#" target="_blank">
-                        <img src="imagens/pagina-modelos/1-elink1.jpg" alt="modelo-1">
-                        <h1>Texto</h1>
-                    </a>
-                </div>
-
-                <div class="card">
-                    <a href="#" target="_blank">
-                        <img src="imagens/pagina-modelos/1-elink1.jpg" alt="modelo-1">
-                        <h1>Texto</h1>
+                        <img src="modelos/3-modelo.jpg" alt="modelo-1">
+                        <h1>Roxo e azul</h1>
                     </a>
                 </div>
 
