--- a/modelos.html
+++ b/modelos.html
@@ -55,21 +55,21 @@
 
                
                 <div class="card">
-                    <a href="#" target="_blank">
+                    <a href="cliente/lanchonete.html" target="_blank">
                         <img src="modelos/1-modelo.jpg" alt="modelo-1">
                         <h1>Vermelho e amarelo</h1>
                     </a>
                 </div>
 
                 <div class="card">
-                    <a href="#" target="_blank">
+                    <a href="cliente/pizzaria.html" target="_blank">
                         <img src="modelos/2-modelo.jpg" alt="modelo-1">
                         <h1>Preto cinza e Amarelo</h1>
                     </a>
                 </div>
 
                 <div class="card">
-                    <a href="#" target="_blank">
+                    <a href="cliente/acaiteria.html" target="_blank">
                         <img src="modelos/3-modelo.jpg" alt="modelo-1">
                         <h1>Roxo e azul</h1>
                     </a>
