Ajustes em diretórios e script de data e hora.

--- a/cliente/lanchonete.html
+++ b/cliente/lanchonete.html
@@ -342,6 +342,6 @@
     <!--Script da página-->
     <script src="/script/script.js"></script>
     <script src="/script/itens.js" defer></script>
-    <script src="/script/funcaohora.js" defer></script>
+    <script src="/script/cliente-script/lanchonete/funcaohora.js" defer></script>
 </body>
 </html>
