--- a/cliente/pizzaria.html
+++ b/cliente/pizzaria.html
@@ -326,6 +326,6 @@
     <!--Script da página-->
     <script src="/script/script.js"></script>
     <script src="/script/itens.js" defer></script>
-    <script src="/script/funcaohora.js" defer></script>
+    <script src="/script/cliente-script/pizzaria/funcaohora.js" defer></script>
 </body>
 </html>
