Ajustes no HTML.

--- a/cliente/lanchonete.html
+++ b/cliente/lanchonete.html
@@ -88,14 +88,14 @@
                 <div class="cards">
                     
                     <!--Item em promoção-->
-                    <!--<div class="card">
+                    <div class="card">
                         <img src="/imagens/cliente-img/lanchonete/1-lanche.jpg" alt="x-salada">
                         <div class="descricao">
                             <h1>X-Salada</h1>
                             <p>(ovo, alface, presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
+                            <h1>R$ 22,00 <s>R$ 24,00</s></h1>
                         </div>
-                    </div>-->
+                    </div>
 
             </div>
         </section>
@@ -118,7 +118,7 @@
                         <div class="descricao">
                             <h1>Lanche</h1>
                             <p>(ovo, alface, presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
+                            <h1>R$ 22,00 <s>R$ 24,00</s></h1>
                         </div>
                     </div>
 
