--- a/cliente/pizzaria.html
+++ b/cliente/pizzaria.html
@@ -85,23 +85,16 @@
             <div class="containers" id="container0">
                 <!--Cards-pratos-->
                 <div class="cards">
+
+                    <div class="card">
+                        <img src="/imagens/cliente-img/pizzaria/1-pizza.jpg" alt="pizza">
+                        <div class="descricao">
+                            <h1>Pizza</h1>
+                            <p>(tomate,queijo mussarela, calabresa, azeitona preta)</p>
+                            <h1> R$ 45,00 <s>R$ 54,00</s></h1>
+                        </div>
+                    </div> 
                     
-                    <!--<div class="card">
-                        <img src="" alt="">
-                        <div class="descricao">
-                            <h1>Titulo</h1>
-                            <p>Vazio</p>
-                            <h1>Valor</h1>
-                        </div>
-                    </div>-->
-                    <!--<div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
-                        <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
-                        </div>
-                    </div>--> 
             </div>
         </section>
 
@@ -123,7 +116,7 @@
                         <div class="descricao">
                             <h1>Pizza</h1>
                             <p>(tomate,queijo mussarela, calabresa, azeitona preta)</p>
-                            <h1>de R$ 25,00 a R$ 54,00</h1>
+                            <h1>R$ 45,00 <s>R$ 54,00</s></h1>
                         </div>
                     </div> 
                     
