--- a/cliente/acaiteria.html
+++ b/cliente/acaiteria.html
@@ -83,25 +83,19 @@
                     <i class="bi bi-caret-down-square-fill"></i>
                 </button></div>
             <div class="containers" id="container0">
+
                 <!--Cards-pratos-->
                 <div class="cards">
                     
-                    <!--<div class="card">
-                        <img src="" alt="">
+                    <div class="card">
+                        <img src="/imagens/cliente-img/acaiteria/1-copo.jpg" alt="copo-pequeno">
                         <div class="descricao">
-                            <h1>Titulo</h1>
-                            <p>Vazio</p>
-                            <h1>Valor</h1>
+                            <h1>Copo Pequeno</h1>
+                            <p>(Copo de 250ml)</p>
+                            <h1>R$ 9,50 <s>10,00</s></h1>
                         </div>
-                    </div>-->
-                    <!--<div class="card">
-                        <img src="imagens/cliente-img/lanchonete/x-salada.jpg" alt="x-salada">
-                        <div class="descricao">
-                            <h1>X-Salada</h1>
-                            <p>(1 ovo, alface, 2 presuntos, queijo, alface)</p>
-                            <h1>R$ 25,00</h1>
-                        </div>
-                    </div>--> 
+                    </div> 
+
             </div>
         </section>
 
@@ -124,7 +118,7 @@
                         <div class="descricao">
                             <h1>Copo Pequeno</h1>
                             <p>(Copo de 250ml)</p>
-                            <h1>R$ 10,00</h1>
+                            <h1>R$ 9,50 <s>10,00</s></h1>
                         </div>
                     </div> 
 
